--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "test": "jest",
-    "build": "node src/index.js"
+    "build": "node src/index.js",
+    "status": "echo 'Endpoint is active and ready!'"
   },
   "author": "Chirantha Siriwardhana",
   "license": "ISC",
