--- a/.github/workflows/api-deployment.yml
+++ b/.github/workflows/api-deployment.yml
@@ -7,9 +7,17 @@ on:
     branches: [main]
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout the repo
+        uses: actions/checkout@v3
+
   deploy:
     runs-on: self-hosted
     needs: build
+
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v3
