--- a/.github/workflows/api-deployment.yml
+++ b/.github/workflows/api-deployment.yml
@@ -28,4 +28,8 @@ jobs:
           node-version: "20"
       - run: |
           npm install
-          npm run start
+          # npm run start
+          pm2 stop 0
+          pm2 start 0
+          pm2 save
+          sudo service nginx restart
