--- a/.github/workflows/api-deployment.yml
+++ b/.github/workflows/api-deployment.yml
@@ -29,6 +29,7 @@ jobs:
       - run: |
           npm install
           # npm run start
+          npm i -g pm2
           pm2 stop 0
           pm2 start 0
           pm2 save
